# mae

./: README.md
backend/: main.py  manage.py  pyproject.toml
backend/mae/: api.py  asgi.py  security.py  urls.py  wsgi.py
backend/mae/settings/: __init__.py  apps.py  base.py  cache.py  database.py  locale.py  static.py  unfold.py
backend/organisations/: admin.py  backends.py  base.py  caches.py  enums.py  exceptions.py  forms.py  middleware.py  permissions.py  utils.py
backend/organisations/controllers/: __init__.py  organization.py
backend/organisations/management/: README.md
backend/organisations/migrations/: 0001_initial.py  0002_initial.py  0002_remove_organization_website.py  0003_alter_organizationuser_options_and_more.py
backend/organisations/models/: __init__.py  organisations.py
backend/organisations/schemas/: organization.py
backend/organisations/services/: __init__.py  organization.py
backend/passport/: admin.py  apps.py  enums.py  exceptions.py  permissions.py
backend/passport/controllers/: __init__.py  base_controller.py  passport.py
backend/passport/migrations/: 0001_initial.py  0002_alter_batch_options_alter_passport_options_and_more.py  0002_rename_date_batch_received_date.py  0003_batch_status.py  0003_remove_batch_is_active_remove_passport_is_active_and_more.py  0004_alter_passport_gender.py  0004_batch_organization_alter_batch_received_date_and_more.py  (+1 more)
backend/passport/models/: __init__.py  (+1 more)
backend/users/: filters.py  models.py  schemas.py  services.py
backend/utils_mixins/: apps.py  mixins.py  models.py  schemas.py  utils.py
(+9 files in other folders)
